--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 h1 {
     color: darkgreen;
     background-color: darkkhaki;
-    margin: auto;
+    margin: 0;
     height: 100px;
     text-align: center;
     font-size: 5em;
@@ -12,30 +12,33 @@ h1 {
 }
 content {
     background-color: rgb(255, 105, 79);
-    min-height: 700px;
-    margin: auto;
-    max-width: 80%;
+    min-height: auto;
+    margin: 0;
+    max-width: 90%;
 }
 menu {
     background-color: darkgoldenrod;
     min-height: 700px;
-    margin: auto;
+    margin: 0;
+    
 }
 menu > ul {
-    list-style: none;
-    padding: 0%;
+    list-style-type: none;
+    padding: 0;
     text-align: left;
 }
 footer {
     background-color: cadetblue;
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    width: 100%;
-    height: 5rem;
+    left: 8px;
+    right: 8px;
+    height: 110px;
     text-align: center;
 }
-.center {
+.rightside {
+    float: right;
+    margin: 10px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-right: 10px;
 }
